--- a/EDA_2_[29_09_25].ipynb
+++ b/EDA_2_[29_09_25].ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 730,
+      "execution_count": 98,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 731,
+      "execution_count": 99,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -361,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 732,
+      "execution_count": 100,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 733,
+      "execution_count": 101,
       "metadata": {},
       "outputs": [
         {
@@ -442,7 +442,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 733,
+          "execution_count": 101,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -453,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 734,
+      "execution_count": 102,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -536,7 +536,7 @@
               "max     2021.000000"
             ]
           },
-          "execution_count": 734,
+          "execution_count": 102,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -548,7 +548,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 735,
+      "execution_count": 103,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -586,7 +586,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 736,
+      "execution_count": 104,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -624,7 +624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 737,
+      "execution_count": 105,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -652,13 +652,13 @@
         "plt.ylabel(\"Count\", fontsize=12, color='grey')\n",
         "plt.title(\"Movies vs TV Shows\", fontsize=20, color='grey')\n",
         "\n",
-        "plt.savefig('images/movies vs tvshows.png', dpi=300, bbox_inches='tight')  # save figure\n",
+        "plt.savefig('images/movies_vs_tvshows.png', dpi=300, bbox_inches='tight')  # save figure\n",
         "plt.show()  \n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 738,
+      "execution_count": 106,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -685,7 +685,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 738,
+          "execution_count": 106,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -698,7 +698,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 739,
+      "execution_count": 107,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -725,7 +725,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 739,
+          "execution_count": 107,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -737,7 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 740,
+      "execution_count": 108,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -766,13 +766,13 @@
         "plt.xlabel(\"Genre\")\n",
         "plt.ylabel(\"Count\")\n",
         "plt.title(\"Top 10 Most Common Genres\")\n",
-        "plt.savefig('images/most common genres.png', dpi=300, bbox_inches='tight')  # save figure\n",
+        "plt.savefig('images/most_common_genres.png', dpi=300, bbox_inches='tight')  # save figure\n",
         "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 741,
+      "execution_count": 109,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -800,13 +800,13 @@
         "plt.xlabel(\"Release Year\")\n",
         "plt.ylabel(\"Number of Titles\")\n",
         "plt.title(\"Number of Titles Released Each Year\")\n",
-        "plt.savefig('images/no of titles each year.png', dpi=300, bbox_inches='tight')  # save figure\n",
+        "plt.savefig('images/no_of_titles_each_year.png', dpi=300, bbox_inches='tight')  # save figure\n",
         "plt.show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 742,
+      "execution_count": 110,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -839,7 +839,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 743,
+      "execution_count": 111,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -874,7 +874,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 744,
+      "execution_count": 112,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -913,7 +913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 745,
+      "execution_count": 113,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -941,7 +941,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 746,
+      "execution_count": 114,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -967,7 +967,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 747,
+      "execution_count": 115,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1000,7 +1000,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 748,
+      "execution_count": 116,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1041,7 +1041,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 749,
+      "execution_count": 117,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1068,7 +1068,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 750,
+      "execution_count": 118,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1095,7 +1095,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 751,
+      "execution_count": 119,
       "metadata": {
         "id": "8rJSw2zWJ-o2"
       },
@@ -1112,7 +1112,7 @@
               "       [1.2090e+03, 4.0000e-01]], shape=(8807, 2))"
             ]
           },
-          "execution_count": 751,
+          "execution_count": 119,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1135,7 +1135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 752,
+      "execution_count": 120,
       "metadata": {
         "id": "G5JhtZX-e8Af"
       },
@@ -1171,7 +1171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 753,
+      "execution_count": 121,
       "metadata": {
         "id": "4807SO8Rfaky"
       },
@@ -1182,7 +1182,7 @@
               "array([21, 21, 21, ..., 10,  7, 16], shape=(8807,))"
             ]
           },
-          "execution_count": 753,
+          "execution_count": 121,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1208,7 +1208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 754,
+      "execution_count": 122,
       "metadata": {
         "id": "sgiGNtPlf5T7"
       },
@@ -1283,7 +1283,7 @@
               "4           Kota Factory          2021            4"
             ]
           },
-          "execution_count": 754,
+          "execution_count": 122,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1296,7 +1296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 755,
+      "execution_count": 123,
       "metadata": {
         "id": "jLRfMCfvgTcu"
       },
@@ -1332,7 +1332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 756,
+      "execution_count": 124,
       "metadata": {
         "id": "Um333AhfhKgt"
       },
@@ -1407,7 +1407,7 @@
               "4           Kota Factory          2021               1"
             ]
           },
-          "execution_count": 756,
+          "execution_count": 124,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1420,7 +1420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 757,
+      "execution_count": 125,
       "metadata": {
         "id": "wIZREmBshWh7"
       },
@@ -1502,7 +1502,7 @@
               "4           3  "
             ]
           },
-          "execution_count": 757,
+          "execution_count": 125,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1515,7 +1515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 758,
+      "execution_count": 126,
       "metadata": {
         "id": "X-3dM1OUhqpM"
       },
@@ -1590,7 +1590,7 @@
               "4           Kota Factory          2021                     4"
             ]
           },
-          "execution_count": 758,
+          "execution_count": 126,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1612,7 +1612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 759,
+      "execution_count": 127,
       "metadata": {
         "id": "_u2Qt8k_iAXf"
       },
@@ -1687,7 +1687,7 @@
               "13  Confessions of an Invisible Girl          2021  Movie"
             ]
           },
-          "execution_count": 759,
+          "execution_count": 127,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1700,7 +1700,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 760,
+      "execution_count": 128,
       "metadata": {
         "id": "DszIjswaiS8R"
       },
@@ -1799,7 +1799,7 @@
               "71        A StoryBots Space Adventure          2021"
             ]
           },
-          "execution_count": 760,
+          "execution_count": 128,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1812,7 +1812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 761,
+      "execution_count": 129,
       "metadata": {
         "id": "gg1tya2yi4tO"
       },
@@ -1881,7 +1881,7 @@
               "4     South Korea    199"
             ]
           },
-          "execution_count": 761,
+          "execution_count": 129,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1895,7 +1895,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 762,
+      "execution_count": 130,
       "metadata": {
         "id": "9-YblnsMkWvH"
       },
@@ -1964,7 +1964,7 @@
               "53    InuYasha the Movie 4: Fire on the Mystic Island          2004"
             ]
           },
-          "execution_count": 762,
+          "execution_count": 130,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1977,7 +1977,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 763,
+      "execution_count": 131,
       "metadata": {
         "id": "7kYxgMDTkj3c"
       },
@@ -2007,7 +2007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 764,
+      "execution_count": 132,
       "metadata": {
         "id": "wd0Y4Hv2lQFI"
       },
@@ -2029,7 +2029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 765,
+      "execution_count": 133,
       "metadata": {
         "id": "Ecigaz8UlZlZ"
       },
@@ -2051,7 +2051,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 766,
+      "execution_count": 134,
       "metadata": {
         "id": "iJenAIzZlgCc"
       },
@@ -2073,7 +2073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 767,
+      "execution_count": 135,
       "metadata": {
         "id": "lGCPIhXClmiW"
       },
@@ -2107,7 +2107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 768,
+      "execution_count": 136,
       "metadata": {
         "id": "wEUYAmccmHRG"
       },
@@ -2134,7 +2134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 769,
+      "execution_count": 137,
       "metadata": {
         "id": "IVkllKElma8Y"
       },
@@ -2160,7 +2160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 770,
+      "execution_count": 138,
       "metadata": {
         "id": "sSRnHvXMmiTo"
       },
@@ -2196,7 +2196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 771,
+      "execution_count": 139,
       "metadata": {
         "id": "AYUhbs5Ym8KF"
       },
@@ -2223,7 +2223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 772,
+      "execution_count": 140,
       "metadata": {
         "id": "B4mxXv-wnF-q"
       },
@@ -2250,7 +2250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 773,
+      "execution_count": 141,
       "metadata": {
         "id": "IsSa52N0nVh2"
       },
@@ -2288,7 +2288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 774,
+      "execution_count": 142,
       "metadata": {
         "id": "SK_3A2ZtoZch"
       },
@@ -2322,7 +2322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 775,
+      "execution_count": 143,
       "metadata": {},
       "outputs": [
         {
@@ -2383,7 +2383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 776,
+      "execution_count": 144,
       "metadata": {},
       "outputs": [
         {
@@ -2523,7 +2523,7 @@
               "std    1.000057e+00  1.000057e+00    1.000057e+00  1.000057e+00  "
             ]
           },
-          "execution_count": 776,
+          "execution_count": 144,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2543,7 +2543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 145,
       "metadata": {},
       "outputs": [
         {
@@ -2556,7 +2556,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 728,
+          "execution_count": 145,
           "metadata": {},
           "output_type": "execute_result"
         }
